estilo del chat

--- a/src/components/messageItem/MessageItem.css
+++ b/src/components/messageItem/MessageItem.css
@@ -21,7 +21,7 @@
 }
 
 .content {
-  background-color: #5fccff;
+  background-color: #ffffff;
   padding: 15px;
   border-radius: 8px;
   max-width: 80%;
