--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -2,7 +2,7 @@
   max-width: 600px; 
   margin: 0 auto; 
   padding: 20px;
-  background-color: #cccccc;
+  background-color: #858585;
   border-radius: 10px;
   margin-top: 6rem;
 }
